# sentiment-analysis

./: .gitignore  2.Adding more data, preprocessing.ipynb  3.Sentiment classifier modeling.ipynb  LICENSE  README.md  app.py  collect_tweets.sh  covidKE tweets.csv  pyproject.toml  requirements.txt  sentiment analysis with twitter data V2 - using more collected data.ipynb  sentiment analysis with twitter data.ipynb  sentiment classifier modeling.ipynb  sentiment classifier modelling.ipynb
csv files/: tweets.csv
notebooks/: 1.Text preprocessing and EDA.ipynb  2.Adding more data, preprocessing.ipynb  3.Sentiment classifier modeling.ipynb
static/: style.css
templates/: home.html
