[tool.poetry]
name = "sentiment analysis"
version = "0.1.0"
description = ""
authors = ["lyraxvincent <njongevincent@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
numpy = "^1.25.0"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
streamlit = "^1.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
